[gd_scene load_steps=10 format=2]

[ext_resource path="res://DeathScreen/Recommencer.png" type="Texture" id=1]
[ext_resource path="res://DeathScreen/Menu_principal_focused.png" type="Texture" id=2]
[ext_resource path="res://DeathScreen/Quitter_focused.png" type="Texture" id=3]
[ext_resource path="res://DeathScreen/Menu_Principal.png" type="Texture" id=4]
[ext_resource path="res://DeathScreen/black_screen.jpg" type="Texture" id=5]
[ext_resource path="res://DeathScreen/you_died.png" type="Texture" id=6]
[ext_resource path="res://DeathScreen/recommencer_focused.png" type="Texture" id=7]
[ext_resource path="res://DeathScreen/Quitter.png" type="Texture" id=8]
[ext_resource path="res://DeathScreen/DeathScreen.gd" type="Script" id=9]

[node name="DeathScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 0
custom_constants/margin_top = 50
custom_constants/margin_left = 0
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 172.0
margin_top = 50.0
margin_right = 852.0
margin_bottom = 580.0
size_flags_horizontal = 4
custom_constants/separation = 50

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_right = 680.0
margin_bottom = 179.0
size_flags_horizontal = 4
texture = ExtResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 177.0
margin_top = 229.0
margin_right = 503.0
margin_bottom = 427.0
size_flags_horizontal = 4
custom_constants/separation = 60

[node name="TextureButton" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 326.0
margin_bottom = 26.0
texture_normal = ExtResource( 1 )
texture_focused = ExtResource( 7 )

[node name="TextureButton2" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 86.0
margin_right = 326.0
margin_bottom = 112.0
texture_normal = ExtResource( 4 )
texture_focused = ExtResource( 2 )

[node name="TextureButton3" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 172.0
margin_right = 326.0
margin_bottom = 198.0
texture_normal = ExtResource( 8 )
texture_focused = ExtResource( 3 )
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/TextureButton2" to="." method="_on_TextureButton2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/TextureButton3" to="." method="_on_TextureButton3_pressed"]
